<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <Button
                    android:id="@+id/view_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_get"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout03"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/Pain_Duration"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/how_long_was_the_attack_hint"
                    android:inputType="number" />
                <EditText
                    android:id="@+id/Pain_Intensity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/intensity_hint"
                    android:inputType="number" />
                <EditText
                    android:id="@+id/Stress_Level"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stress_level_hint"
                    android:inputType="number" />
                <EditText
                    android:id="@+id/Sleep_Duration"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sleep_duration_hint"
                    android:inputType="number" />
                <LinearLayout
                    android:id="@+id/LinearLayout04"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <CheckBox
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Alcohol"
                        android:text="@string/Alcohol"
                        android:onClick="onCeckboxClicked" />
                    <CheckBox
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Coffee"
                        android:text="@string/Coffee"
                        android:onClick="onCeckboxClicked" />
                    <CheckBox
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Cheese"
                        android:text="@string/Cheese"
                        android:onClick="onCeckboxClicked" />
                    <CheckBox
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Chocolate"
                        android:text="Chocolate"
                        android:onClick="onCeckboxClicked" />
                </LinearLayout>
                <Button
                    android:id="@+id/post_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_post"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>